--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,8 @@
         <item name="android:fontFamily">@font/poppinsbold</item>
         <item name="textAllCaps">false</item>
     </style>
+
+    <style name="PurpleText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#3A0460</item>
+    </style>
 </resources>
