--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,12 +3,16 @@
 
     <style name="Font" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#3A0460</item>
         <item name="android:fontFamily">@font/poppinsbold</item>
         <item name="textAllCaps">false</item>
     </style>
 
     <style name="PurpleText" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">#3A0460</item>
+        <item name="android:textColor">#101D6B</item>
     </style>
+
+    <style name="WhiteText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
 </resources>
