--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -37,6 +37,7 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgVwPic" />
 
@@ -61,7 +62,7 @@
 
     <ImageView
         android:id="@+id/imgVwPic"
-        android:layout_width="166dp"
+        android:layout_width="150dp"
         android:layout_height="155dp"
         android:layout_marginStart="132dp"
         android:layout_marginTop="200dp"
