--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -9,11 +9,28 @@
     <TextView
         android:id="@+id/notes"
         style="@style/PurpleText"
+        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:fontFamily="@font/poppinsbold"
-        android:text="Notes"
+        android:text="My Notes"
         android:textSize="30sp" />
+
+    <TextView
+        android:layout_width="371dp"
+        android:layout_height="126dp"
+        android:layout_marginTop="100dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/round"
+        android:hint="Leave a note here !" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recylcerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="270dp"
+        tools:layout_editor_absoluteX="745dp"
+        tools:layout_editor_absoluteY="-51dp" />
 
 </FrameLayout>
