--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -41,6 +41,7 @@
             style="@style/PurpleText"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:textColor="@color/purple_200"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/poppinsmedium"
             android:textSize="17sp" />
@@ -77,6 +78,7 @@
             android:id="@+id/lastName"
             style="@style/PurpleText"
             android:layout_width="200dp"
+            android:textColor="@color/purple_200"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/poppinsmedium"
@@ -116,6 +118,7 @@
             android:id="@+id/noPhone"
             style="@style/PurpleText"
             android:layout_width="200dp"
+            android:textColor="@color/purple_200"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/poppinsmedium"
@@ -153,6 +156,7 @@
             android:id="@+id/birthDate"
             style="@style/PurpleText"
             android:layout_width="200dp"
+            android:textColor="@color/purple_200"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/poppinsmedium"
@@ -190,6 +194,7 @@
             android:id="@+id/address"
             style="@style/PurpleText"
             android:layout_width="200dp"
+            android:textColor="@color/purple_200"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/poppinsmedium"
@@ -228,6 +233,7 @@
             android:id="@+id/gender"
             style="@style/PurpleText"
             android:layout_width="200dp"
+            android:textColor="@color/purple_200"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:fontFamily="@font/poppinsmedium"
@@ -254,19 +260,6 @@
         android:layout_marginRight="130dp"
         android:layout_marginLeft="130dp"
         android:text="Edit Profile"
-        android:textColor="@color/white"
-        android:fontFamily="@font/poppinsmedium"
-        android:textAllCaps="false"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/edtPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="500dp"
-        android:background="@color/blue"
-        android:layout_marginRight="100dp"
-        android:layout_marginLeft="100dp"
-        android:text="Change Password"
         android:textColor="@color/white"
         android:fontFamily="@font/poppinsmedium"
         android:textAllCaps="false"/>
