--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -17,19 +17,31 @@
         android:text="My Notes"
         android:textSize="30sp" />
 
-    <TextView
+    <EditText
         android:layout_width="371dp"
         android:layout_height="126dp"
         android:layout_marginTop="100dp"
+        android:id="@+id/note"
         android:layout_gravity="center_horizontal"
+        android:inputType="textPersonName"
         android:background="@drawable/round"
-        android:hint="Leave a note here !" />
+        android:hint="Leave a note here !"
+        android:textAlignment="center"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:text="Add Note"
+        android:layout_marginTop="250dp"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recylcerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="270dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="340dp"
         tools:layout_editor_absoluteX="745dp"
         tools:layout_editor_absoluteY="-51dp" />
 
